# Codebase-Understanding-Agent

./: .gitignore  README.md  RECONNAISSANCE.md  RECONNAISSANCE_ol-data-platform.md  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  onboarding_brief.md
.cartography/jaffle_shop/: CODEBASE.md  cartography_trace.jsonl  git_velocity_weekly.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/jaffle_shop/semantic_index/: chroma.sqlite3
.cartography/ol-data-platform/: CODEBASE.md  cartography_trace.jsonl  git_velocity_weekly.json  lineage_graph.json  module_graph.json  onboarding_brief.md
.cartography/ol-data-platform/semantic_index/: chroma.sqlite3
.cartography/roo_code/: CODEBASE.md  cartography_trace.jsonl  git_velocity_weekly.json  lineage_graph.json  module_graph.json  onboarding_brief.md
Challenge-doc/: TRP 1 Challenge Week 4_ The Brownfield Cartographer.docx
docs/: TRP 1 Challenge Week 4_ The Brownfield Cartographer.docx
spec/: idea.md  plan.md  todo.md
src/: cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  repo_ingester.py  sql_lineage.py  tree_sitter_analyzer.py
src/dashboard/: app.py
src/graph/: knowledge_graph.py
src/models/: __init__.py  edges.py  nodes.py
tests/: test_archivist.py  test_dag_config_parser.py  test_hydrologist.py  test_knowledge_graph.py  test_models.py  test_repo_ingester.py  test_sql_lineage.py  test_surveyor.py  test_tree_sitter_analyzer.py
(+1 files in other folders)
